# NNU-ehall-cpp

./: CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt  login.cpp  main.cpp  queryinfo.cpp  test.cpp
apps/: main.cpp
include/: login.hpp  queryinfo.hpp
src/: login.cpp  queryinfo.cpp
